[project]
name = "get-around"
version = "0.1.0"
description = "httpx wrapper with custom relay support"
readme = "README.md"
requires-python = ">=3.14"
authors = [
  { name = "ryn-cx", email = "262888154+ryn-cx@users.noreply.github.com" }
]
dependencies = [
  "httpx>=0.28.1",
  "keyring>=25.7.0",
]

[dependency-groups]
dev = [
  "mypy>=2.2.0",
  "pytest>=8.0",
  "ruff>=0.15.21",
  "ty>=0.0.58",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
